--- a/examples/sandbox/ControlDBSandbox.htm
+++ b/examples/sandbox/ControlDBSandbox.htm
@@ -1,6 +1,6 @@
 <!--	
   Control Sandbox :
-  To support ControlDB project at  : https://github.com/techfort/ControlDB
+  To support ControlDB project at  : https://github.com/firatkiral/ControlDB
 
   This web page is designed to allow you to experiment with control and/or inspect existing saved control database files.
 
@@ -217,7 +217,7 @@
             query their contents.
           <p style="font-size:18px">
             This utility page is to support <a href="http://controldb.org" target="_blank">ControlDB</a>.<br /><br/>
-            You can also view the <a href="https://github.com/techfort/ControlDB" target="_blank">GitHub page</a>.
+            You can also view the <a href="https://github.com/firatkiral/ControlDB" target="_blank">GitHub page</a>.
           </p>
           <p>
             Some example logging commands are :<br/>
